add compilation diff for add-exports and add-opens